--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1>Countries & Trips & Reviews & Guides</h1>
             <h3><a href=""><b>Author's</b></a> selection and review of countries</h3>
         </header>
-        <main>
+        <main><h1>MAKE YOUR OWN CHOICE</h1>
             <div class="grid-container">
 
                 <div class="Countries eu">
